# ycprox

./: README.md  pyproject.toml
docs/: README_RU.md
src/ycprox/: main.py
src/ycprox/cli/: __init__.py  auth.py
src/ycprox/cli/auth/: __init__.py
src/ycprox/cli/proxy/: __init__.py  model.py
src/ycprox/cli/proxy/down/: __init__.py
src/ycprox/cli/proxy/up/: __init__.py
src/ycprox/core/: apispec.py  config.py  secrets.py  yc_client.py
src/ycprox/helpers/: apispec.py  archive_utils.py  proxy_serverless.py
src/ycprox/ycloud/: apigateway.py  client.py  cloudfunction.py
